--- a/bithereum.conf
+++ b/bithereum.conf
@@ -1,4 +1,4 @@
-daemon=1
+daemon=0
 server=1
 rpcallowip=0.0.0.0/0
 rpcuser=bithereum
@@ -9,4 +9,4 @@ dbcache=100
 maxmempool=10
 maxconnections=10
 prune=550
-
+addnode=96.56.229.210
