--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -1,9 +1,13 @@
-daemon=1
+[main]
+daemon=0
 server=1
 rpcallowip=0.0.0.0/0
 rpcuser=bitcoin
 rpcpassword=bitcoin
+rpcport=18554
+port=18553
 dbcache=100
 maxmempool=10
 maxconnections=10
 prune=550
+connect=10.1.10.206:8223
