Updated conf files to add testnets, litecoin, and bitcoin gold

--- a/bitcoin-testnet.conf
+++ b/bitcoin-testnet.conf
@@ -1,10 +1,15 @@
+testnet=1
+
+[main]
+
+[test]
 daemon=1
 server=1
 rpcallowip=0.0.0.0/0
-rpcuser=nimblenode
-rpcpassword=nimblenode
-rpcport=18554
-port=18553
+rpcuser=bitcoin
+rpcpassword=bitcoin
+rpcport=18332
+port=18333
 dbcache=100
 maxmempool=10
 maxconnections=20
