--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -1,9 +1,17 @@
+[main]
 daemon=1
 server=1
 rpcallowip=0.0.0.0/0
 rpcuser=bitcoin
 rpcpassword=bitcoin
+rpcport=8332
+port=8333
 dbcache=100
 maxmempool=10
-maxconnections=10
+maxconnections=20
 prune=550
+par=1
+maxsigcachesize=4
+blocksonly=1
+rpctimeout=10
+maxorphantx=10
