--- a/litecoin-testnet.conf
+++ b/litecoin-testnet.conf
@@ -1,10 +1,12 @@
+testnet=1
+
 daemon=1
 server=1
 rpcallowip=0.0.0.0/0
 rpcuser=nimblenode
 rpcpassword=nimblenode
-rpcport=18554
-port=18553
+rpcport=9333
+port=9332
 dbcache=100
 maxmempool=10
 maxconnections=20
