Add Bitcoin Cash ABC and updated ports

--- a/bitcoincashabc-testnet.conf
+++ b/bitcoincashabc-testnet.conf
@@ -1,3 +1,6 @@
+testnet=1
+
+[test]
 daemon=1
 server=1
 rpcallowip=0.0.0.0/0
@@ -12,5 +15,4 @@ prune=550
 par=1
 maxsigcachesize=4
 blocksonly=1
-rpctimeout=10
 maxorphantx=10
